[gd_scene load_steps=3 format=3 uid="uid://bj7ih751oss83"]

[ext_resource type="Script" path="res://Scripts/npc_interaction.gd" id="1_qbx5e"]
[ext_resource type="PackedScene" uid="uid://cigyny2l3600t" path="res://Scenes/dialog_screen.tscn" id="2_b2h76"]

[node name="NPC_interaction" type="Area2D"]
script = ExtResource("1_qbx5e")

[node name="Dialog_screen" parent="." instance=ExtResource("2_b2h76")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
